fix z-index to bring icon to top

--- a/src/Umbraco.Web.UI.Client/src/less/components/umb-form-check.less
+++ b/src/Umbraco.Web.UI.Client/src/less/components/umb-form-check.less
@@ -98,6 +98,7 @@
     .icon,
     .umb-icon {
         font-size: 1.2rem;
+        z-index: 1;
     }
 
     &__state {
